syntax = "proto3";


package chessmsg;


enum Camp {
    A = 0; // White
    B = 1; // Black
}

/*
    Piece and square are represented by int32.
    It requires stable square table and piece table.
*/

message ChessSituation {
    Camp turn = 1;
    repeated SPC spc = 2;
    repeated Movement history = 3;
}

// "Square & Piece & Camp"
message SPC {
    int32 square = 1;
    int32 piece = 2;
    Camp camp = 3;
}

message Movement {
    int32 piece = 1;
    int32 frm = 2;
    int32 to = 3;
    int32 capture = 4;
    int32 replace = 5; // Piece
    Movement sub = 6;
}

message Outcome {
    enum Status {
        CHECKMATE = 0;
        STALEMATE = 1;
        DRAW = 2;
        RESIGN = 3;
    }

    Status status = 1;
    Camp winner = 2;
}

/*
    Subscribe and Notification
*/

message SubscribeRequest {
    string game_id = 1;
    string client_id = 2;
}

message Notification {
    string game_id = 1;
    oneof event {
        ChessSituation situation = 2;
        Movement movement = 3;
        Outcome outcome = 4;
    }
    Camp turn_to = 5;
}

/*
    Make moves
*/

message Action {
    string game_id = 1;
    Movement movement = 2;
    string special = 3;
}

message ActionStatus {
    string game_id = 1;
    bool ok = 2;
    string caption = 3;
}

/*
    New game and attending game
*/

message GameRequest {
    string client_id = 1;
}

message GameResponse {
    string game_id = 1;
}

service Chess {
    rpc subscribe (SubscribeRequest) returns (stream Notification);
    rpc make_move (Action) returns (ActionStatus);
    rpc attend_game (GameRequest) returns (GameResponse);
}
